# python-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  conftest.py  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: AdvancedAugmentation.md  MONGODB_SETUP.md  POSTGRESQL_SETUP.md
docs/examples/cockroachdb/: .env.example  README.md  main.py  pyproject.toml
docs/examples/mongodb/: README.md  main.py
docs/examples/postgres/: README.md  main.py
docs/examples/sqlite/: README.md  main.py  pyproject.toml
examples/cockroachdb/: README.md  main.py
examples/mongodb/: README.md  main.py  pyproject.toml
examples/neon/: README.md  main.py
examples/postgres/: README.md  main.py  pyproject.toml
examples/sqlite/: README.md  main.py
memori/: __init__.py  __main__.py  _cli.py  _config.py  _network.py  _utils.py
memori/api/: _quota.py  _sign_up.py
memori/llm/: __init__.py  _base.py  _clients.py  _constants.py  _embeddings.py  _invoke.py  _iterable.py  _iterator.py  _providers.py  _registry.py  _streaming.py  _utils.py  _xai_wrappers.py
memori/llm/adapters/anthropic/: _adapter.py
memori/llm/adapters/bedrock/: _adapter.py
memori/llm/adapters/google/: _adapter.py
memori/llm/adapters/openai/: _adapter.py
memori/llm/adapters/xai/: _adapter.py
memori/memory/: _collector.py  _manager.py  _writer.py
memori/memory/augmentation/: _registry.py
memori/memory/augmentation/augmentations/memori/: _augmentation.py
memori/storage/: __init__.py  _base.py  _builder.py  _manager.py  _registry.py
memori/storage/adapters/dbapi/: _adapter.py
memori/storage/adapters/django/: _adapter.py
memori/storage/adapters/mongodb/: _adapter.py
memori/storage/adapters/sqlalchemy/: _adapter.py
memori/storage/drivers/mongodb/: _driver.py
memori/storage/drivers/mysql/: _driver.py
memori/storage/drivers/postgresql/: _driver.py
memori/storage/drivers/sqlite/: _driver.py
memori/storage/migrations/: _mongodb.py  _mysql.py  _postgresql.py  _sqlite.py
scripts/: mongodb.sh
scripts/mongo-init/: init-mongo.js
tests/: test_config.py  test_init.py  test_network.py  test_utils.py
tests/database/: core.py  init_db.py
tests/llm/: test_llm_base.py  test_llm_clients.py  test_llm_embeddings_bundled.py  test_llm_registry.py  test_llm_utils.py  test_llm_xai_wrappers.py
tests/llm/adapters/anthropic/: test_llm_adapters_anthropic_adapter.py
tests/llm/adapters/bedrock/: test_llm_adapters_bedrock_adapter.py
tests/llm/adapters/google/: test_llm_adapters_google_adapter.py
tests/llm/adapters/openai/: test_llm_adapters_openai_adapter.py
tests/llm/clients/enterprise/anthropic/: async.py  sync.py
tests/llm/clients/enterprise/gemini/: async.py  async_streaming.py  sync.py
tests/llm/clients/enterprise/langchain/chatgooglegenai/: async_runnable.py  async_streaming.py  sync.py  sync_runnable.py  sync_runnable_structured_output.py
tests/llm/clients/enterprise/langchain/chatopenai/: async_ainvoke.py  async_runnable.py  async_streaming.py  sync.py  sync_runnable.py  sync_runnable_structured_output.py
tests/llm/clients/enterprise/langchain/chatvertexai/: sync.py
tests/llm/clients/enterprise/openai/: async.py  async_streaming.py  sync.py
tests/llm/clients/enterprise/xai/: async.py  async_streaming.py  sync.py
tests/llm/clients/oss/anthropic/: async.py  sync.py
tests/llm/clients/oss/langchain/chatgooglegenai/: async_runnable.py  async_streaming.py  sync.py  sync_runnable.py  sync_runnable_structured_output.py
tests/llm/clients/oss/langchain/chatopenai/: async_ainvoke.py  async_runnable.py  (+4 more)
tests/llm/clients/oss/openai/: async.py  async_streaming.py  sync.py
tests/llm/clients/oss/xai/: async.py  async_stream.py  sync.py
tests/memory/: test_memory_writer.py
tests/memory/augmentation/: test_advanced_augmentation.py
tests/network/: async.py  sync.py
tests/storage/: test_storage_manager.py  test_storage_registry.py
tests/storage/adapters/: conftest.py
tests/storage/adapters/dbapi/: test_dbapi_no_conflicts.py  test_storage_adapters_dbapi_adapter.py
tests/storage/adapters/django/: test_storage_adapters_django_adapter.py
tests/storage/adapters/sqlalchemy/: test_storage_adaptors_sqlalchemy_adapter.py
tests/storage/drivers/: conftest.py  test_mongodb_driver.py  test_mysql_driver.py  test_postgresql_driver.py  test_sqlite_driver.py
(+1 files in other folders)
