[build-system]
requires = ["google", "setuptools>=60", "setuptools_scm[toml]>=7", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memorisdk"
authors = [{ name="Memori", email="noc@memorilabs.ai" }]
description = "Memori Python SDK"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.12",
]
version = "3.0.0"
dependencies = [
    "aiohttp",
    "botocore",
    "grpcio",
    "protobuf",
    "pyfiglet"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests*", "docs*"]

[project.urls]
Homepage = "https://memorilabs.ai/"
Documentation = "https://developers.memorilabs.ai/"
Repository = "https://github.com/GibsonAI/"

[tool.black]
line-length=88
target-version = ['py312']

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "openai>=2.6.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.1.0",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-cockroachdb>=1.4.0",
]
