[build-system]
requires = ["google", "setuptools>=60", "setuptools_scm[toml]>=7", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memori"
version = "3.0.0"
description = "Memori Python SDK"
authors = [{name = "GibsonAI Team", email = "noc@gibsonai.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "memory", "agents", "llm", "artificial-intelligence", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

dependencies = [
    "aiohttp",
    "botocore",
    "grpcio",
    "protobuf",
    "pyfiglet"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["memori*"]
exclude = ["tests*", "docs*", "*.egg-info"]

[project.urls]
Homepage = "https://github.com/GibsonAI/memori"
Documentation = "https://memori.gibsonai.com/docs"
Repository = "https://github.com/GibsonAI/memori.git"
"Bug Tracker" = "https://github.com/GibsonAI/memori/issues"
"Changelog" = "https://github.com/GibsonAI/memori/blob/main/CHANGELOG.md"
"Contributing" = "https://github.com/GibsonAI/memori/blob/main/CONTRIBUTING.md"

[tool.black]
line-length=88
target-version = ['py310']

[tool.isort]
profile = "black"

[dependency-groups]
dev = [
    "anthropic>=0.71.0",
    "langchain-core>=1.0.1",
    "langchain-google-genai>=3.0.0",
    "openai>=2.6.0",
    "psycopg2-binary>=2.9.0",
    "psycopg[binary]>=3.1.0",
    "pymongo>=4.15.3",
    "pymysql>=1.1.2",
    "pytest>=8.4.2",
    "pytest-mock>=3.15.1",
    "requests>=2.32.5",
    "ruff>=0.8.0",
    "sqlalchemy>=2.0.44",
    "sqlalchemy-cockroachdb>=1.4.0",
]
